Closed Bug 1163643 Opened 10 years ago Closed 10 years ago

Fix unified build errors following recent marking changes

Categories

(Core :: JavaScript: GC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: jonco, Assigned: jonco)

Details

Attachments

(1 file)

I get a bunch of build errors when building SM with patches that add a new source file. Here's a patch to address them.
Attachment #8604138 - Flags: review?(terrence)
Comment on attachment 8604138 [details] [diff] [review] fix-unified-build-errors Review of attachment 8604138 [details] [diff] [review]: ----------------------------------------------------------------- Thanks! I wish we still had a non-unified build option.
Attachment #8604138 - Flags: review?(terrence) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: