Bug 1163643 - Fix unified build errors following recent marking changes r=terrence